Remove ZGC generational option